// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAllLocalPoContent returns an array of tuples of localecode (filename) and object of trns 1`] = `
Array [
  "en-US",
  Object {
    "mockMessage.id": Object {
      "comments": Object {
        "reference": "src/path/to/en-US.po.trns.jsx:1:2",
        "translator": "WP-1234",
      },
      "msgid": "mockMessage.id",
      "msgstr": Array [
        "mock translated copy",
      ],
    },
    "mockMessage.id.en-US.po": Object {
      "comments": Object {
        "reference": "src/path/to/en-US.po.trns.jsx:3:4",
        "translator": "WP-2345",
      },
      "msgid": "mockMessage.id.en-US.po",
      "msgstr": Array [
        "mock translated copy from en-US.po",
      ],
    },
  },
]
`;

exports[`getLocalLocaleMessages returns an Object that maps locales to messages 1`] = `
Object {
  "en-US": Object {
    "mockMessage.id": "mock translated copy",
    "mockMessage.id.en-US.po": "mock translated copy from en-US.po",
  },
  "es": Object {
    "mockMessage.id": "mock translated copy",
    "mockMessage.id.es.po": "mock translated copy from es.po",
  },
  "es-ES": Object {
    "mockMessage.id": "mock translated copy",
    "mockMessage.id.es-ES.po": "mock translated copy from es-ES.po",
    "mockMessage.id.es.po": "mock translated copy from es.po",
  },
  "fr-FR": Object {
    "mockMessage.id": "mock translated copy",
    "mockMessage.id.fr-FR.po": "mock translated copy from fr-FR.po",
  },
}
`;

exports[`poObjToPoString takes trn content, returns po file: 
"msgid \\"\\"
msgstr \\"Content-Type: text/plain; charset=utf-8\\\\n\\"

# WP-1234
#: src/path/to/component.trns.jsx:4:45
msgid \\"mockMessage.id\\"
msgstr \\"mock translated copy\\"
"
 1`] = `
"msgid \\"\\"
msgstr \\"Content-Type: text/plain; charset=utf-8\\\\n\\"

# WP-1234
#: src/path/to/component.trns.jsx:4:45
msgid \\"mockMessage.id\\"
msgstr \\"mock translated copy\\"
"
`;

exports[`poStringToPoObj parses PO-formatted file content into a plain JS object map 1`] = `
Object {
  "mockMessage.id": Object {
    "comments": Object {
      "reference": "src/path/to/component.trns.jsx:4:45",
      "translator": "WP-1234",
    },
    "msgid": "mockMessage.id",
    "msgstr": Array [
      "mock translated copy",
    ],
  },
}
`;

exports[`trn utils convert message descriptor objects into po style objects 1`] = `
Object {
  "id1": Object {
    "comments": Object {
      "extracted": "text for test",
      "reference": "text.txt:2:5",
      "translator": "MW-001",
    },
    "msgid": "id1",
    "msgstr": Array [
      "id1 text",
    ],
  },
  "id2": Object {
    "comments": Object {
      "extracted": "text for test v2",
      "reference": "text2.txt:10:10",
      "translator": "MW-002",
    },
    "msgid": "id2",
    "msgstr": Array [
      "id2 text",
    ],
  },
}
`;

exports[`trn utils filters po content by keys 1`] = `
Object {
  "mockMessage.id": Object {
    "comments": Object {
      "reference": "src/path/to/component.trns.jsx:4:45",
      "translator": "WP-1234",
    },
    "msgid": "mockMessage.id",
    "msgstr": Array [
      "mock translated copy",
    ],
  },
}
`;

exports[`trn utils loads resource list and sorts by date modified 1`] = `
Array [
  "MW-1168_gh_delete_discussion",
  "MW-1454_memberSample",
]
`;

exports[`trn utils merge objects, throw error if dupe key 1`] = `
Object {
  "mockMessage.id": Object {
    "comments": Object {
      "reference": "src/path/to/component.trns.jsx:4:45",
      "translator": "WP-1234",
    },
    "msgid": "mockMessage.id",
    "msgstr": Array [
      "mock translated copy",
    ],
  },
  "mockMessage.id.2": Object {
    "comments": Object {
      "extracted": "text for test v2",
      "reference": "text2.txt:10:10",
    },
    "msgid": "mockMessage.id.2",
    "msgstr": Array [
      "id2 text",
    ],
  },
}
`;

exports[`trn utils takes po objects and returns react intl format 1`] = `
Object {
  "mockMessage.id": "mock translated copy",
}
`;

exports[`trn utils takes po objects and returns tx upload format 1`] = `
Array [
  Object {
    "key": "mockMessage.id",
    "translation": "mock translated copy",
  },
]
`;
